--- a/music/templates/music/detail.html
+++ b/music/templates/music/detail.html
@@ -3,3 +3,4 @@
 <h1>{{song.songtitle}}</h1>
 <h2>Artist : {{song.artist}}</h2>
 <h3>Album : {{song.albumtitle}}</h3>
+<!--<h4>Hits : {{song_play.songhits}}</h4>-->
