--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -1,71 +1,19 @@
-<!-- loads path to your static files -->
-{% load staticfiles %}
+{% extends 'music/base.html' %}
 
-<!--
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
--->
+{% block body %}
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<link href='https://fonts.googleapis.com/css?family=Comic+Sans' rel='stylesheet' type='text/css'>
-<link rel= "stylesheet" type="text/css" href="{% static 'music/style.css' %}"/>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  {% if all_songs %}
 
-
-<nav_class="navbar navbar-default">
-    <div class = "container-fluid">
-      <!-- logo -->
-        <div class = "navbar-header">
-            <button type = "button" class="navbar-toggle" data-toggle="collapse" data-target="">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class = "navbar-brand" href="{% url 'music:index' %}">StreamIt - Multimedia Streaming Service</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="topNavBar">
-            <ul class="nav navbar-nav">
-              <li class="">
-                  <a href="#">
-                      <span class="glyphicon glyphicon-music" aria-hidden="true"></span>&nbsp;
-                      Songs
-                  </a>
-              </li>
-            </ul>
-
-            <form class="navbar-form navbar-left" role="search" method="get" action="#">
-                <div class="form-group">
-                    <input type="text" class+"form-control" name="q" value="">
-                </div>
-                <button type="submit" class+"btn btn-default">Search</button>
-            </form>
-
-            <ul class="nav navbar-nav navbar-left">
-              <li class="">
-                  <a href="#">
-                      <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp;
-                      Logout
-                  </a>
-              </li>
-            </ul>
-
-        </div>
-
-    </div>
-</nav>
-
-{% if all_songs %}
-
- <h3> HERE ARE THE SONGS ON STREAMIT </h3>
+  <h3> HERE ARE THE SONGS ON STREAMIT </h3>
   <ul>
-    {% for song in all_songs %}
-        <li><a href="{% url 'music:detail' song.songid %}">{{ song.songtitle }}</a></li>
-    {% endfor %}
+      {% for song in all_songs %}
+          <li><a href="{% url 'music:detail' song.songid %}">{{ song.songtitle }}</a></li>
+      {% endfor %}
   </ul>
-{% else %}
-    <h3>You don't have any albums</h3>
-{% endif %}
+  {% else %}
+      <h3>You don't have any albums</h3>
+  {% endif %}
 
+{% endblock %}
 
 <!-- /music/{{ song.songid } -->
